[package]
name = "kaist"
version = "0.1.1"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"
description = "KAIST API library"
readme = "README.md"
repository = "https://github.com/AkiaCode/kaist"
license = "MIT"
keywords = ["kaist", "api"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }
serde_json = "1.0.2"
serde = { version = "1.0", features = ["derive"] }